--- a/dbwwinkel/templates/dbwwinkel/question_list.html
+++ b/dbwwinkel/templates/dbwwinkel/question_list.html
@@ -17,45 +17,7 @@
                         <ul class="nav ">
                             <form name="status" action="{% url "list_questions" %}" method='GET' accept-charset="utf-8">
                                 <input type="hidden" name="search_text" value="{{ search_text }}">
-                                {% for field in facet_form %}
-                                    <div class='form-group'>
-
-                                        {% if forloop.counter == 1 %}
-                                            {% if user.is_authenticated %}
-                                                <div class='checkbox'>
-                                                    &nbsp
-                                                    {{ facet_form.own_questions }}{{ facet_form.own_questions.label }}
-                                                </div>
-                                            {% endif %}
-                                        {% elif forloop.counter == 2 %}
-                                            <strong>{{ facet_form.status.label }}:</strong>
-                                            {% for value,name in facet_form.status.field.choices %}
-                                                <div class='checkbox'>
-                                                    <label><input type="checkbox" name='status' value="{{ value }}"
-                                                            {% if value in facet_form.status.initial %}
-                                                                  checked='checked'{% endif %}>
-                                                        {{ name }}
-                                                    </label>
-                                                </div>
-                                            {% endfor %}
-                                        {% else %}
-                                            <strong>{{ field.label }}</strong>
-                                            {% for checkbox in field %}
-                                                <div class='checkbox'>
-                                                    {% with  forloop.counter0 as checkboxcounter %}
-                                                        {% with forloop.parentloop.counter0 as parentc %}
-
-                                                            {{ checkbox }}(
-                                                            {{ facet_count|index:parentc|index:checkboxcounter|index:1 }}
-                                                            )
-                                                            </div>
-                                                        {% endwith %}
-                                                    {% endwith %}
-                                            {% endfor %}
-                                        {% endif %}
-
-                                    </div>
-                                {% endfor %}
+                                    {% include admin_filter %}
                                 <input class='btn btn-success' type="submit" value="Filter"/>
                             </form>
                         </ul>
