--- a/dbwwinkel/templates/dbwwinkel/Options_question_list/options_students.html
+++ b/dbwwinkel/templates/dbwwinkel/Options_question_list/options_students.html
@@ -6,7 +6,7 @@
     {% if forloop.counter == 1 %}
         {% if user.is_organisation %}
             <div class='checkbox'>
-                &nbsp
+                &nbsp&nbsp&nbsp&nbsp
                 {{ facet_form.own_questions }}{{ facet_form.own_questions.label }}
             </div>
         {% endif %}
