--- a/dbwwinkel/templates/dbwwinkel/admin_page.html
+++ b/dbwwinkel/templates/dbwwinkel/admin_page.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block extra_head %}
-    <link rel ="stylesheet" href = "//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
 {% endblock %}
 {% block content %}
@@ -10,11 +10,29 @@
             <div class='span2 sidebar'>
                 <h3>Vragenbeheer</h3>
                 <ul class="nav nav-tabs nav-stacked">
-                    <li><a href='#'>Te verwerken</a></li>
-                    <li><a href='#'>Nieuwe vragen</a></li>
-                    <li><a href='#'>Toe te wijzen vragen</a></li>
-                    <li><a href='#'>Vragen in regionale verwerking</a></li>
-                    <li><a href='#'>Alle vragen</a></li>
+                    <li><a href='{% url 'admin_to_process' %}'>Te verwerken</a></li>
+                    {% if user.is_central_manager%}
+                        <li><a href='{% url 'admin_new' %}'>Nieuwe vragen</a></li>
+                    {% endif %}
+                    {% if user.is_regional_manager %}
+                        <li><a href='#'>Intake verwerking</a></li>
+                    {% endif %}
+                    {% if user.is_central_manager%}
+                        <li><a href='{% url 'admin_intake_done' %}'>Intake klaar</a></li>
+                    {% endif %}
+                    {% if user.is_regional_manager %}
+                        <li><a href = "#">Open te zetten </a></li>
+                    {% endif %}
+                    <li><a href='#'>In optie</a></li>
+                    <li><a href='#'>Afgerond</a></li>
+                    <li><a href="#">Geweigerd</a></li>
+                    <li><a href="#">Teruggetrokken</a></li>
+
+                    <li><a href='{% url 'admin_regional_process' %}'>Vragen in regionale verwerking</a></li>
+
+                    <li><a href='{% url 'list_questions' %}'>Alle vragen</a></li>
+
+
                 </ul>
             </div>
             <div class='span2 sidebar'>
@@ -54,11 +72,11 @@
                     <tr data-href="{% url 'detail_question' question.id %}"
                         class='table-row'
                         style="cursor:pointer;">
-                        <td class='col-md-1'>{{ question.creation_date.date }}</td>
-                        <td class='col-md-1'>{{ question.organisation_name }}</td>
-                        <td class='col-md-6'>{{ question.question_text }}</td>
-                        <td class='col-md-1'>{{ question.get_state_display }}</td>
-                        <td class='col-md-1'>{% for inst in question.institution.all %}
+                        <td class='col-md-1 text-center'>{{ question.creation_date.date }}</td>
+                        <td class='col-md-1 text-center'>{{ question.organisation_name }}</td>
+                        <td class='col-md-6 text-center'>{{ question.question_text }}</td>
+                        <td class='col-md-1 text-center'>{{ question.get_state_display }}</td>
+                        <td class='col-md-1 text-center'>{% for inst in question.institution.all %}
                             {{ inst.name }}{% endfor %}</td>
                         <td class='col-md-1'>{% for ed in question.education.all %}
                             {{ ed }}{% endfor %}</td>
