Added password reset and corrected typo.

--- a/dbwwinkel/templates/dbwwinkel/question_list.html
+++ b/dbwwinkel/templates/dbwwinkel/question_list.html
@@ -38,7 +38,7 @@
                             <th class='text-center'>Vraag</th>
                             <th class='text-center'>Status</th>
                             <th class='text-center'>Instelling</th>
-                            <th class='text-center'>Opledingen</th>
+                            <th class='text-center'>Opleiding</th>
                         </tr>
                         </thead>
                         <tbody>
