--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -49,6 +49,11 @@
                     <a href="{% url 'register_question' %}">Stel een vraag</a>
                 </li>
             {% endif %}
+            {% if user.is_authenticated %}
+                <li>
+                    <a href="{% url 'password_change' %}">Verander paswoord</a>
+                </li>
+            {% endif %}
             <li class="nav-item">
                 <a href="{% url 'logout' %}">Afmelden</a>
             </li>
